name: creet-infection
version: 0.1
authors: ["Your Name"]
license: "MIT"
source: "git+https://github.com/yourusername/creet-infection.git"
depends: [
  "eliom" {>= "6.0.0"},
  "js_of_ocaml" {>= "3.0.0"},
  "lwt" {>= "5.0.0"},
  "lwt_js" {>= "5.0.0"}
]
build: [
  {preprocess: "pps" "ppx_deriving.show"}
]