(include dune.config)

(dirs tools client gen assets static local)

(library
 (name h42n42)
 (modules
  (:standard \ H42n42_main))
 (libraries eliom.server ocsigen-start.server ocsipersist-pgsql)
 (library_flags
  (:standard -linkall))
 (wrapped false)
 (preprocess
  (pps
   lwt_ppx
   pgocaml_ppx
   js_of_ocaml-ppx_deriving_json
   ocsigen-i18n
   ocsigen-ppx-rpc
   eliom.ppx.server
   --
   --prefix
   H42n42_
   --suffix
   _i18n
   --default-module
   H42n42_i18n)))

(executables
 (names h42n42_main)
 (public_names h42n42)
 (modes
  (byte exe)
  (native exe))
 (libraries
  eliom.server
  ocsigen-start.server
  ocsipersist-pgsql
  ocsigenserver.ext.staticmod
  h42n42)
 (modules H42n42_main)
 (preprocess
  (pps
   lwt_ppx
   pgocaml_ppx
   js_of_ocaml-ppx_deriving_json
   ocsigen-i18n
   ocsigen-ppx-rpc
   eliom.ppx.server
   --
   --prefix
   H42n42_
   --suffix
   _i18n
   --default-module
   H42n42_i18n)))

(rule
 (target h42n42_i18n.eliom)
 (deps assets/h42n42_i18n.tsv)
 (action
  (with-stdout-to
   %{target}
   (with-stdin-from
    %{deps}
    (pipe-stdout
     (run
      ocsigen-i18n-generator
      --languages
      en,fr
      --default-language
      fr
      %{deps})
     (run
      sed
      "1 s/]/[@@deriving json]]\\n[%%shared [@@@ocaml.warning\"-27\"]]/"))))))


(rule
 (target h42n42_static_config.eliom)
 (deps h42n42_static_config.eliom.in)
 (action
  (with-stdout-to
   %{target}
   (with-stdin-from
    h42n42_static_config.eliom.in
    (run
     sed
     -e
     "s/%%PGPORT%%/%{env:PGPORT=3000}/"
     -e
     "s/%%PGDATABASE%%/%{env:PGDATABASE=h42n42}/"
     -e
     "s/%%PGDATABASE%%/%{env:PGDATABASE=h42n42}/"
     -e
     "s/%%PGHOST%%/%{env:PGHOST=h42n42}/"
     -e
     "s/%%PGUSER%%/%{env:PGUSER=}/"
     -e
     "s/%%PGPASSWORD%%/%{env:PGPASSWORD=h42n42}/")))))

(subdir
 gen
 (rule
  (deps ../tools/gen_dune.ml)
  (action
   (with-stdout-to
    dune.client
    (run ocaml ../tools/gen_dune.ml)))))

(subdir
 client
 (executables
  (names h42n42)
  (modes js byte)
  (preprocess
   (pps
    js_of_ocaml-ppx
    lwt_ppx
    ocsigen-i18n
    --
    --prefix
    H42n42_
    --suffix
    _i18n
    --default-module
    H42n42_i18n))
  (js_of_ocaml
   (build_runtime_flags :standard --enable use-js-string)
   (flags
    :standard
    --enable
    with-js-error
    --enable
    use-js-string
    --no-source-map))
  ; source maps are slow...
  (libraries eliom.client ocsigen-start.client))
 (dynamic_include ../gen/dune.client))

; Main rule:

(rule
 (alias h42n42)
 (deps
  h42n42.cma
  client/h42n42.bc
  client/h42n42.bc.js
  tools/check_modules.ml)
 (action
  (run ocaml -I +unix -I +str tools/check_modules.ml h42n42)))
